--- a/.github/workflows/Build and Push Image to Docker Hub.yml
+++ b/.github/workflows/Build and Push Image to Docker Hub.yml
@@ -18,12 +18,17 @@ jobs:
       -
         name: Image Build
         uses: docker/setup-buildx-action@v2
+        
+      -
+        name: Expression
+        run: echo ${{github.sha}}
       -
         name: Login Docker Hub
         uses: docker/login-action@v2
         with:
           username: rahatullah123  
           password: pakistan123PPPP
+      
       -
         name: Image Push DockerHub
         uses: docker/build-push-action@v4
