--- a/.github/workflows/(Define Variable) Build and Push Image to Docker Hub.yml
+++ b/.github/workflows/(Define Variable) Build and Push Image to Docker Hub.yml
@@ -30,8 +30,8 @@ jobs:
         name: Login Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{USERNAME}}  
-          password: ${{PASSWORD}} 
+          username: ${{secrets.USERNAME}}  
+          password: ${{secrets.PASSWORD}} 
       
       -
         name: Image Push DockerHub
