--- a/.github/workflows/Complete_Life_cycle.yml
+++ b/.github/workflows/Complete_Life_cycle.yml
@@ -44,22 +44,18 @@ jobs:
     runs-on: [self-hosted, Linux, X64 ,staging]
     needs: job1_public_runner
     steps:
- 
-      -
-        name: Set up QEMU
+   -
+        name: Set up QEMU test
         uses: docker/setup-qemu-action@v2
-    
       -
-        name: Image Build
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-         
-     
       -
-        name: Login Docker Hub
+        name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.USERNAME}}  
-          password: ${{secrets.PASSWORD}} 
+          username: rahatullah123  
+          password: pakistan123PPPP
       
       -
       
