--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,7 +1,7 @@
 name: Lint Code Base
 
 #############################
-# Start the job on all push #
+# Start the job on all push 
 #############################
 on:
   push:
